--- a/index.html
+++ b/index.html
@@ -6,40 +6,45 @@
 <P>This is Yizirui FANG</P>
 <p>Hello, This is Yizirui FANG</p>
 <p>
-My name is Yizirui FANG. I am a undergraduate Year 2 Computer Science student in the University of Nottingham Ningbo China.
+    My name is Yizirui FANG. I am a undergraduate Year 2 Computer Science student in the University of Nottingham Ningbo
+    China.
 </p>
 <p>
-This is my first page. So, this page would all be about my self.
+    This is my first page. So, this page would all be about my self.
 </p>
 
 <div><p>Education
 </p>
-<p><div style="font-weight: bold;" >University of Nottingham Ningbo China</div>                                     2018 Sep- 2022 Jun
+    <p>
+    <div style="font-weight: bold;">University of Nottingham Ningbo China 2018 Sep- 2022 Jun</div>
+    <div> Bachelor of Science (Hons) in Computer Science</div>
+    <div>
+        GPA: 4.0 Expected degree: the first class
+    </div>
+    <div>
+        Core modules: Database and Interfaces, Systems and Architecture, Programming Paradigms, Fundamentals of
+        Artificial Intelligence, Software Engineering, Programming and algorithm, Computer Fundamentals and Mathematics
+        for Computer Scientists
+    </div>
+    </p>
 
-Bachelor of Science (Hons) in Computer Science
+    <p>
+        <div style="font-weight: bold">Imperial College London            2019 Jul - 2019 Jul
+</div>
+        Machine Learning and applied statistics summer course (ECTS 7.5)
 
-GPA: 4.0       Expected degree: the first class
-
-Core modules: Database and Interfaces, Systems and Architecture, Programming Paradigms, Fundamentals of Artificial Intelligence, Software Engineering, Programming and algorithm, Computer Fundamentals and Mathematics for Computer Scientists
-</p>
-
-<p>
-Imperial College London                                                                                              2019 Jul - 2019 Jul
-
-Machine Learning and applied statistics summer course (ECTS 7.5)
-
-GPA: 3.8
-</p>
+        GPA: 3.8
+    </p>
 </div>
 
 <div>
     <p>
-Competition Experience
+        Competition Experience
 
-Mathematical Contest in Modeling
+        Mathematical Contest in Modeling
 
-Honorable Mention
-</p>
+        Honorable Mention
+    </p>
 </div>
 </body>
 </html>
