--- a/index.html
+++ b/index.html
@@ -29,21 +29,23 @@
     </p>
 
     <p>
-        <div style="font-weight: bold">Imperial College London            2019 Jul - 2019 Jul
-</div>
-        Machine Learning and applied statistics summer course (ECTS 7.5)
+    <div style="font-weight: bold">Imperial College London 2019 Jul - 2019 Jul
+    </div>
+    Machine Learning and applied statistics summer course (ECTS 7.5)
 
-        GPA: 3.8
+    GPA: 3.8
     </p>
 </div>
 
 <div>
+    <div style="font-weight: bold">Competition Experience</div>
     <p>
-        Competition Experience
-
+    <div>
         Mathematical Contest in Modeling
-
+    </div>
+    <div>
         Honorable Mention
+    </div>
     </p>
 </div>
 </body>
