--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <title>Yizirui Fang Page</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<P>This is Yizirui FANG</P>
-<p>Hello, This is Yizirui FANG</p>
-<p>
-    My name is Yizirui FANG. I am a undergraduate Year 2 Computer Science student in the University of Nottingham Ningbo
-    China.
-</p>
-<p>
-    This is my first page. So, this page would all be about my self.
-</p>
-
-<div><p>Education
+<div class="container">
+    <p class="h1">Hello!</p>
+</div>
+<div class="container">
+    <p>
+        My name is <label style="font-weight: bold">Yizirui FANG</label>. I am currently a undergraduate Year 2 Computer Science student in the University of
+        Nottingham Ningbo
+        China.
+    </p>
+</div>
+<div class="container"><p class="h2">Education
 </p>
     <p>
-    <div style="font-weight: bold;">University of Nottingham Ningbo China 2018 Sep- 2022 Jun</div>
+    <div><span><strong>University of Nottingham Ningbo China</strong></span> <span class="text-right">Sep, 2018 - Jun, 2022</span> </div>
     <div> Bachelor of Science (Hons) in Computer Science</div>
     <div>
         GPA: 4.0 Expected degree: the first class
@@ -29,7 +32,7 @@
     </p>
 
     <p>
-    <div style="font-weight: bold">Imperial College London 2019 Jul - 2019 Jul
+    <div style="font-weight: bold">Imperial College London Jul, 2019 - Jul, 2019
     </div>
     Machine Learning and applied statistics summer course (ECTS 7.5)
 
@@ -37,16 +40,25 @@
     </p>
 </div>
 
-<div>
-    <div style="font-weight: bold">Competition Experience</div>
+<div class="container">
+    <div class="h2">Competition Experience</div>
     <p>
     <div>
-        Mathematical Contest in Modeling
+        Mathematical Contest in Modeling                April, 2020
     </div>
     <div>
         Honorable Mention
     </div>
     </p>
 </div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </body>
 </html>
