--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <title>Yizirui Fang Page</title>
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+          crossorigin="anonymous">
+    <title>My Page</title>
 </head>
 <body>
 <div class="container">
@@ -11,45 +13,15 @@
 </div>
 <div class="container">
     <p>
-        My name is <label style="font-weight: bold">Yizirui FANG</label>. I am currently a undergraduate Year 2 Computer Science student in the University of
-        Nottingham Ningbo
-        China.
+        This is my index page. You could find the follow information about me.
     </p>
-</div>
-<div class="container"><p class="h2">Education
-</p>
-    <p>
-    <div><span><strong>University of Nottingham Ningbo China</strong></span> <span class="text-right">Sep, 2018 - Jun, 2022</span> </div>
-    <div> Bachelor of Science (Hons) in Computer Science</div>
     <div>
-        GPA: 4.0 Expected degree: the first class
+        <a href="MyProfile.html" class="btn btn-default btn-lg justified" role="button">My profile</a>
     </div>
     <div>
-        Core modules: Database and Interfaces, Systems and Architecture, Programming Paradigms, Fundamentals of
-        Artificial Intelligence, Software Engineering, Programming and algorithm, Computer Fundamentals and Mathematics
-        for Computer Scientists
+        <a href="https://github.com/circleTreeF/my-Y2-UNNC-CW" class="btn btn-default btn-lg justified" role="button">My
+            coursework in Year 2 Autumn Semester</a>
     </div>
-    </p>
-
-    <p>
-    <div style="font-weight: bold">Imperial College London Jul, 2019 - Jul, 2019
-    </div>
-    Machine Learning and applied statistics summer course (ECTS 7.5)
-
-    GPA: 3.8
-    </p>
-</div>
-
-<div class="container">
-    <div class="h2">Competition Experience</div>
-    <p>
-    <div>
-        Mathematical Contest in Modeling                April, 2020
-    </div>
-    <div>
-        Honorable Mention
-    </div>
-    </p>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
