my profile update

--- a/my_blog/MyProfile.html
+++ b/my_blog/MyProfile.html
@@ -56,6 +56,17 @@
     </p>
 </div>
 <div class="container">
+    <div class="h2">Project Experience</div>
+    <p>
+    <div>
+        <strong>Study of Conformal Predictor</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;June, 2020- Sept, 2020
+    </div>
+    <div>
+
+    </div>
+    </p>
+</div>
+<div class="container">
     <div class="h2">Campus Experience</div>
     <p>
     <div><strong>Peer Mentor</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sept 2019 to Sept 2020</div>
