--- a/MyProfile.html
+++ b/MyProfile.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-    <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-              integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-              crossorigin="anonymous">
-        <title>Yizirui Fang Page</title>
-    </head>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+          crossorigin="anonymous">
+    <title>Yizirui Fang Page</title>
+</head>
 <body>
 <div class="container">
-<p class="h1">Hello!</p>
+    <p class="h1">Hello!</p>
 </div>
 <div class="container">
     <p>
@@ -52,6 +52,17 @@
     </div>
     <div>
         Honorable Mention
+    </div>
+    </p>
+</div>
+<div class="container">
+    <div class="h2">Project Experience</div>
+    <p>
+    <div>
+        <strong>Study of Conformal Predictor</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;June, 2020- Sept, 2020
+    </div>
+    <div>
+
     </div>
     </p>
 </div>
