--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <a href="https://github.com/circleTreeF/my-Y2-UNNC-CW" class="btn btn-default btn-lg justified" role="button">My
             coursework in Year 2 Autumn Semester</a>
     </div>
+    <div>
+        <a href="my_blog/" class="btn btn-default btn-lg justified" role="button">My
+            blog (CN only)</a>
+    </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
