pref(profile add one project experience)

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -27,8 +27,9 @@
     </div>
     <div> Bachelor of Science (Hons) in Computer Science</div>
     <div>
-        GPA: 4.0 Expected degree: the first class
+        GPA: 4.0
     </div>
+    <div>Expected degree: the first class</div>
     <div>
         Core modules: Database and Interfaces, Systems and Architecture, Programming Paradigms, Fundamentals of
         Artificial Intelligence, Software Engineering, Programming and algorithm, Computer Fundamentals and Mathematics
@@ -56,10 +57,22 @@
     </p>
 </div>
 <div class="container">
-    <div class="h2">Project Experience</div>
+    <div class="h2">Research Project Experience</div>
     <p>
     <div>
-        <strong>Study of Conformal Predictor</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;June, 2020- Sept, 2020
+        <strong>Study of Conformal Predictor</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jun, 2020- Oct, 2020
+    </div>
+
+    <div>
+        Conformal predictors are useful algorithms for making predictions with confidence by predicting sets of values
+        rather than making point predictions. They have the property that they are reliable to some user-defined
+        confidence level, so long as data is independent and identically distributed (iid). These algorithms would split
+        the samples data into 3 data sets, the proper training set, the calibration set and the testing set.
+        However, in the real world  cases, the size of the available data set may be too limited to split into three significant data sets.This
+        leads to the research challenges in two directions: (1) to ensure that their predictions are optimally efficient, (2) since inductive conformal predictor require three
+        independent data sets, proper training, calibration and testing, how best to manage the allocation of data to those three
+        sets whilst maintaining the reliability property. This research project addresses those problems with the target to provide
+        a modified version of conformal predictor by overlapping the proper training set and the calibration set and recommendations on their use.
     </div>
     <div>
 
@@ -74,9 +87,9 @@
         <li>Peer Mentor is an perform established by the Department of Campus Life of the University of Nottingham
             Ningbo, China. This perform is to allow excellent senior students to help freshmen.
         </li>
-        <li>I organized meetings, class leaders’ election and sharing sessions for the class of 45 students to
+        <li>Organized meetings, class leaders’ election and sharing sessions for the class of 45 students to
             strengthen their cohesion also made them familiar mutually. By organizing several sharing sections ranging
-            from academic and administrative issues, I successfully help these students get used to their freshmen life
+            from academic and administrative issues, successfully help these students get used to their freshmen life
             so far.
         </li>
     </ul>
@@ -88,11 +101,11 @@
         <li>Students Campaign Team is an intern team working for provost office which aims to brighten the brand of the
             university and contribute to public welfare.
         </li>
-        <li>I organized twice Ceilidh Dance Parties with members. I introduced guided over one hundred tutors, students
+        <li>Organized twice Ceilidh Dance Parties with members. Introduced guided over one hundred tutors, students
             and
             alumnus dancing together. This is to celebrate the festival and improve the brand of the team.
         </li>
-        <li>I organized the annual team meeting. I design the procedures and programs in the meeting, arrange the design
+        <li>Organized the annual team meeting. Design the procedures and programs in the meeting, arrange the design
             and manufacture of all literal and visual materials and design the annual review video.
         </li>
     </ul>
@@ -104,11 +117,11 @@
         <li>ACCA Club is a student organization attached to Nottingham University Business School, China, and be
             supported by ACCA officially, and faces and serves for whole eastern china in academic fields.
         </li>
-        <li>organized the 2018 Eastern China Industry Analysis Competition with teammates. I invited and helped more
+        <li>Organized the 2018 Eastern China Industry Analysis Competition with teammates. I invited and helped more
             than 10 students from Nanjing Audit University be active in and complete the competition via WeChat Public
             Account.
         </li>
-        <li>organized the Kyle Item Exchange Competition. I designed the whole process of this competition and the
+        <li>Organized the Kyle Item Exchange Competition. I designed the whole process of this competition and the
             marking guideline. This competition attracted about 100 students and engaged them in applying theory in
             practice.
         </li>
