pref(project restructured)

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -64,15 +64,45 @@
     </div>
 
     <div>
-        Conformal predictors are useful algorithms for making predictions with confidence by predicting sets of values
-        rather than making point predictions. They have the property that they are reliable to some user-defined
-        confidence level, so long as data is independent and identically distributed (iid). These algorithms would split
-        the samples data into 3 data sets, the proper training set, the calibration set and the testing set.
-        However, in the real world  cases, the size of the available data set may be too limited to split into three significant data sets.This
-        leads to the research challenges in two directions: (1) to ensure that their predictions are optimally efficient, (2) since inductive conformal predictor require three
-        independent data sets, proper training, calibration and testing, how best to manage the allocation of data to those three
-        sets whilst maintaining the reliability property. This research project addresses those problems with the target to provide
-        a modified version of conformal predictor by overlapping the proper training set and the calibration set and recommendations on their use.
+        <ul>
+            <li>This research project is supervised by <a
+                    href="https://www.nottingham.edu.cn/en/Science-Engineering/People/Profile.aspx?id=5dbd1941-a876-41ed-aca9-96d2d0fab573&language=en-GB">Dr.
+                Tony</a> at the University of Nottingham Ningbo China, School of Computer Science.
+            </li>
+            <li>Conformal predictors are useful algorithms for making predictions with confidence by predicting sets of
+                values
+                rather than making point predictions. They have the property that they are reliable to some user-defined
+                confidence level, so long as data is independent and identically distributed (iid). These algorithms
+                would split
+                the samples data into 3 data sets, the proper training set, the calibration set and the testing set.
+            </li>
+            <li>Organized meetings, class leaders’ election and sharing sessions for the class of 45 students to
+                strengthen their cohesion also made them familiar mutually. By organizing several sharing sections
+                ranging
+                from academic and administrative issues, successfully help these students get used to their freshmen
+                life
+                so far.
+            </li>
+            <li>However, in the real world cases, the size of the available data set may be too limited to split into
+                three
+                significant data sets. This
+                leads to the research challenges in two directions: (1) to ensure that their predictions are optimally
+                efficient, (2) since inductive conformal predictor require three
+                independent data sets, proper training, calibration and testing, how best to manage the allocation of
+                data to
+                those three
+                sets whilst maintaining the reliability property.
+            </li>
+            <li>
+                This research project addresses those problems with the target
+                to provide
+                a modified version of conformal predictor by overlapping the proper training set and the calibration set
+                and
+                recommendations on their use.
+            </li>
+        </ul>
+
+
     </div>
     <div>
 
