pref(project expectation added)

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -100,6 +100,9 @@
                 and
                 recommendations on their use.
             </li>
+            <li>
+                <b>One journal paper is expected for this research project.</b>
+            </li>
         </ul>
 
 
