pref(v-class added)

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -60,109 +60,134 @@
     <div class="h2">Research Project Experience</div>
     <p>
     <div>
-        <strong>Study of Conformal Predictor</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jun, 2020- Oct, 2020
-    </div>
+        <div>
+            <strong>Study of Conformal Predictor</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jun, 2020- Oct, 2020
+        </div>
 
+        <div>
+            <ul>
+                <li>This research project is supervised by <a
+                        href="https://www.nottingham.edu.cn/en/Science-Engineering/People/Profile.aspx?id=5dbd1941-a876-41ed-aca9-96d2d0fab573&language=en-GB">Dr.
+                    Tony</a> at the University of Nottingham Ningbo China, School of Computer Science.
+                </li>
+                <li>
+                    <b>One journal paper is expected for this research project.</b>
+                </li>
+                <li>Conformal predictors are useful algorithms for making predictions with confidence by predicting sets
+                    of
+                    values
+                    rather than making point predictions. They have the property that they are reliable to some
+                    user-defined
+                    confidence level, so long as data is independent and identically distributed (iid). These algorithms
+                    would split
+                    the samples data into 3 data sets, the proper training set, the calibration set and the testing set.
+                </li>
+                <li>However, in the real world cases, the size of the available data set may be too limited to split
+                    into
+                    three
+                    significant data sets. This
+                    leads to the research challenges in two directions: (1) to ensure that their predictions are
+                    optimally
+                    efficient, (2) since inductive conformal predictor require three
+                    independent data sets, proper training, calibration and testing, how best to manage the allocation
+                    of
+                    data to
+                    those three
+                    sets whilst maintaining the reliability property.
+                </li>
+                <li>
+                    This research project addresses those problems with the target
+                    to provide
+                    a modified version of conformal predictor by overlapping the proper training set and the calibration
+                    set
+                    and
+                    recommendations on their use.
+                </li>
+
+            </ul>
+
+        </div>
+    </div>
     <div>
+        <div>
+            <strong>Virtual Classroom Project Team of University of Nottingham Ningbo China</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sept,
+            2020- Present
+        </div>
+        <div>Student Internship For Software</div>
+        <div>
+            <ul>
+                <li>Focusing on the exploration of Virtual Reality technologies, Virtual Classroom aims at enhancing our
+                    teaching & learning experience at University of Nottingham Ningbo China - moving towards the future.
+                </li>
+                <li>Develop and utilise the university's own customised and interactive virtual world, starting from a
+                    virtual classroom based on Unity3D with C#.
+                </li>
+            </ul>
+        </div>
+        </p>
+    </div>
+    <div class="container">
+        <div class="h2">Campus Experience</div>
+        <p>
+        <div><strong>Peer Mentor</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sept 2019 to Sept 2020</div>
         <ul>
-            <li>This research project is supervised by <a
-                    href="https://www.nottingham.edu.cn/en/Science-Engineering/People/Profile.aspx?id=5dbd1941-a876-41ed-aca9-96d2d0fab573&language=en-GB">Dr.
-                Tony</a> at the University of Nottingham Ningbo China, School of Computer Science.
+            <li>Peer Mentor is an perform established by the Department of Campus Life of the University of Nottingham
+                Ningbo, China. This perform is to allow excellent senior students to help freshmen.
             </li>
-            <li>
-                <b>One journal paper is expected for this research project.</b>
+            <li>Organized meetings, class leaders’ election and sharing sessions for the class of 45 students to
+                strengthen their cohesion also made them familiar mutually. By organizing several sharing sections
+                ranging
+                from academic and administrative issues, successfully help these students get used to their freshmen
+                life
+                so far.
             </li>
-            <li>Conformal predictors are useful algorithms for making predictions with confidence by predicting sets of
-                values
-                rather than making point predictions. They have the property that they are reliable to some user-defined
-                confidence level, so long as data is independent and identically distributed (iid). These algorithms
-                would split
-                the samples data into 3 data sets, the proper training set, the calibration set and the testing set.
-            </li>
-            <li>However, in the real world cases, the size of the available data set may be too limited to split into
-                three
-                significant data sets. This
-                leads to the research challenges in two directions: (1) to ensure that their predictions are optimally
-                efficient, (2) since inductive conformal predictor require three
-                independent data sets, proper training, calibration and testing, how best to manage the allocation of
-                data to
-                those three
-                sets whilst maintaining the reliability property.
-            </li>
-            <li>
-                This research project addresses those problems with the target
-                to provide
-                a modified version of conformal predictor by overlapping the proper training set and the calibration set
-                and
-                recommendations on their use.
-            </li>
-
         </ul>
-
-
+        </p>
+        <p>
+        <div><strong>Students Campaign Team</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sept 2018 to May 2019
+        </div>
+        <div><strong>Staff</strong></div>
+        <ul>
+            <li>Students Campaign Team is an intern team working for provost office which aims to brighten the brand of
+                the
+                university and contribute to public welfare.
+            </li>
+            <li>Organized twice Ceilidh Dance Parties with members. Introduced guided over one hundred tutors, students
+                and
+                alumnus dancing together. This is to celebrate the festival and improve the brand of the team.
+            </li>
+            <li>Organized the annual team meeting. Design the procedures and programs in the meeting, arrange the design
+                and manufacture of all literal and visual materials and design the annual review video.
+            </li>
+        </ul>
+        </p>
+        <p>
+        <div><strong>ACCA Club</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sept 2018 to May 2019</div>
+        <div><strong>Staff</strong></div>
+        <ul>
+            <li>ACCA Club is a student organization attached to Nottingham University Business School, China, and be
+                supported by ACCA officially, and faces and serves for whole eastern china in academic fields.
+            </li>
+            <li>Organized the 2018 Eastern China Industry Analysis Competition with teammates. I invited and helped more
+                than 10 students from Nanjing Audit University be active in and complete the competition via WeChat
+                Public
+                Account.
+            </li>
+            <li>Organized the Kyle Item Exchange Competition. I designed the whole process of this competition and the
+                marking guideline. This competition attracted about 100 students and engaged them in applying theory in
+                practice.
+            </li>
+        </ul>
+        </p>
     </div>
-    <div>
-
-    </div>
-    </p>
-</div>
-<div class="container">
-    <div class="h2">Campus Experience</div>
-    <p>
-    <div><strong>Peer Mentor</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sept 2019 to Sept 2020</div>
-    <ul>
-        <li>Peer Mentor is an perform established by the Department of Campus Life of the University of Nottingham
-            Ningbo, China. This perform is to allow excellent senior students to help freshmen.
-        </li>
-        <li>Organized meetings, class leaders’ election and sharing sessions for the class of 45 students to
-            strengthen their cohesion also made them familiar mutually. By organizing several sharing sections ranging
-            from academic and administrative issues, successfully help these students get used to their freshmen life
-            so far.
-        </li>
-    </ul>
-    </p>
-    <p>
-    <div><strong>Students Campaign Team</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sept 2018 to May 2019</div>
-    <div><strong>Staff</strong></div>
-    <ul>
-        <li>Students Campaign Team is an intern team working for provost office which aims to brighten the brand of the
-            university and contribute to public welfare.
-        </li>
-        <li>Organized twice Ceilidh Dance Parties with members. Introduced guided over one hundred tutors, students
-            and
-            alumnus dancing together. This is to celebrate the festival and improve the brand of the team.
-        </li>
-        <li>Organized the annual team meeting. Design the procedures and programs in the meeting, arrange the design
-            and manufacture of all literal and visual materials and design the annual review video.
-        </li>
-    </ul>
-    </p>
-    <p>
-    <div><strong>ACCA Club</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sept 2018 to May 2019</div>
-    <div><strong>Staff</strong></div>
-    <ul>
-        <li>ACCA Club is a student organization attached to Nottingham University Business School, China, and be
-            supported by ACCA officially, and faces and serves for whole eastern china in academic fields.
-        </li>
-        <li>Organized the 2018 Eastern China Industry Analysis Competition with teammates. I invited and helped more
-            than 10 students from Nanjing Audit University be active in and complete the competition via WeChat Public
-            Account.
-        </li>
-        <li>Organized the Kyle Item Exchange Competition. I designed the whole process of this competition and the
-            marking guideline. This competition attracted about 100 students and engaged them in applying theory in
-            practice.
-        </li>
-    </ul>
-    </p>
-</div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"></script>
 </body>
 </html>
