pref(format in v-class update)

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -113,7 +113,7 @@
             <strong>Virtual Classroom Project Team of University of Nottingham Ningbo China</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sept,
             2020- Present
         </div>
-        <div>Student Internship For Software</div>
+        <div><strong>Student Internship For Software</strong></div>
         <div>
             <ul>
                 <li>Focusing on the exploration of Virtual Reality technologies, Virtual Classroom aims at enhancing our
