pref(improve the detail of profile)

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -119,7 +119,8 @@
                 <li>Focusing on the exploration of Virtual Reality technologies, Virtual Classroom aims at enhancing our
                     teaching & learning experience at University of Nottingham Ningbo China - moving towards the future.
                 </li>
-                <li>Develop and utilise the university's own customised and interactive virtual world, starting from a
+                <li>Develop and utilise the Android version and the multi-player module of the university's own
+                    customised and interactive virtual reality software, starting from a
                     virtual classroom based on Unity3D with C#.
                 </li>
             </ul>
