feat(music and personal image): add music box for the index page and image in profile page.

--- a/MyProfile.html
+++ b/MyProfile.html
@@ -10,6 +10,10 @@
     <p class="h1">Hello!</p>
 </div>
 <div class="container">
+    This is me.
+    <img src="https://raw.githubusercontent.com/circleTreeF/myImg/master/GitHub_Image.jpg" style="width:150px;height:200px;" alt="My photo">
+</div>
+<div class="container">
     <p>
         My name is <label style="font-weight: bold">Yizirui FANG</label>. I am currently a undergraduate Year 3 Computer
         Science student in the University of
@@ -17,6 +21,7 @@
         China.
     </p>
     <p>Tel: +86 17762570926</p>
+    <p>Professional Email: <a href="mailto:scyyf1@nottingham.edu.cn">scyyf1@nottingham.edu.cn</a></p>
     <p>Email <a href="mailto:circletree@outlook.com">circletree@outlook.com</a></p>
 </div>
 <div class="container">
