--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 <div class="container">
     <p>
-        This is my index page. You could find the follow information about me.
+        I'm Yizirui Fang. This is my index page. You could find the follow information about me.
     </p>
     <div>
         <a href="MyProfile.html" class="btn btn-default btn-lg justified" role="button">My profile</a>
